[project]
name = "personal-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "bradlet",email = "mail@bradlet.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab (>=4.3.5,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
